docs/api/qiskit/0.19/ibmq_utils.md
---
title: utils
description: API reference for qiskit.providers.ibmq.utils
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.providers.ibmq.utils
---

<span id="module-qiskit.providers.ibmq.utils" />

<span id="qiskit-providers-ibmq-utils" />

# Utilities

<span id="module-qiskit.providers.ibmq.utils" />

`qiskit.providers.ibmq.utils¶`

Utility functions related to the IBM Quantum Provider.

## Conversion

<span id="module-qiskit.providers.ibmq.utils" />

`¶`

|                                                                                                                                     |                                                                           |
| ----------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------- |
| [`seconds_to_duration`](qiskit.providers.ibmq.utils.seconds_to_duration "qiskit.providers.ibmq.utils.seconds_to_duration")(seconds) | Converts seconds in a datetime delta to a duration.                       |
| [`utc_to_local`](qiskit.providers.ibmq.utils.utc_to_local "qiskit.providers.ibmq.utils.utc_to_local")(utc\_dt)                      | Convert a UTC `datetime` object or string to a local timezone `datetime`. |

## Qobj Utils

<span id="module-qiskit.providers.ibmq.utils" />

`¶`

|                                                                                                                                                       |                                                                       |
| ----------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
| [`update_qobj_config`](qiskit.providers.ibmq.utils.update_qobj_config "qiskit.providers.ibmq.utils.update_qobj_config")(qobj\[, backend\_options, …]) | Update a `Qobj` configuration from backend options and a noise model. |

## Misc Functions

<span id="module-qiskit.providers.ibmq.utils" />

`¶`

|                                                                                                                                            |                                              |
| ------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------- |
| [`to_python_identifier`](qiskit.providers.ibmq.utils.to_python_identifier "qiskit.providers.ibmq.utils.to_python_identifier")(name)        | Convert a name to a valid Python identifier. |
| [`validate_job_tags`](qiskit.providers.ibmq.utils.validate_job_tags "qiskit.providers.ibmq.utils.validate_job_tags")(job\_tags, exception) | Validates input job tags.                    |

